--- a/rest_framework/templates/rest_framework/docs/index.html
+++ b/rest_framework/templates/rest_framework/docs/index.html
@@ -31,7 +31,7 @@
 
         <div class="container" id="main">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 main-container">
                     {% include "rest_framework/docs/document.html" %}
                 </div>
             </div>
