--- a/rest_framework/templates/rest_framework/docs/link.html
+++ b/rest_framework/templates/rest_framework/docs/link.html
@@ -5,9 +5,10 @@
 <button class="btn btn-sm btn-success" style="float: right; margin-top: 20px" data-toggle="modal" data-target="#{{ section_key }}_{{ link_key }}_modal">Interact</button>
 
 <h3 id="{{ section_key }}-{{ link_key }}">{{ link.title|default:link_key }}</h3>
-    <p>
-        <span class="label label-primary">{{ link.action|upper }}</span> <code>{{ link.url }}</code>
-    </p>
+    <div class="meta">
+        <span class="label label-primary">{{ link.action|upper }}</span>
+        <code>{{ link.url }}</code>
+    </div>
 
     <p>{% render_markdown link.description %}</p>
 
