--- a/rest_framework/templates/rest_framework/docs/sidebar.html
+++ b/rest_framework/templates/rest_framework/docs/sidebar.html
@@ -18,7 +18,7 @@
 
         <div class="language-switcher">
             <h6>Choose Language</h6>
-            <div class="btn-group">
+            <div class="btn-group dropup">
               <button type="button" class="btn btn-info btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span>shell</span> &nbsp;&nbsp;<span class="caret"></span>
               </button>
