--- a/rest_framework/templates/rest_framework/docs/link.html
+++ b/rest_framework/templates/rest_framework/docs/link.html
@@ -7,7 +7,7 @@
         style="float: right; margin-top: 20px"
         data-toggle="modal"
         data-target="#{{ section_key }}_{{ link_key }}_modal">
-        Interact
+        <i class="fa fa-exchange"></i> Interact
     </button>
 
     <h3 id="{{ section_key }}-{{ link_key }}" class="coredocs-link-title">{{ link.title|default:link_key }} <a href="#{{ section_key }}-{{ link_key }}"><i class="fa fa-link" aria-hidden="true"></i>
