--- a/rest_framework/templates/rest_framework/docs/interact.html
+++ b/rest_framework/templates/rest_framework/docs/interact.html
@@ -5,8 +5,15 @@
 <div class="modal-dialog modal-lg" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <div class="toggle-view hide">
+        <div class="btn-group" role="group">
+          <button type="button" data-display-toggle="data" class="btn btn-sm btn-info">Data</button>
+          <button type="button" data-display-toggle="raw" class="btn btn-sm">Raw</button>
+        </div>
+      </div>
+
       <h3 class="modal-title"><i class="fa fa-exchange"></i> {{ link.title|default:link_key }}</h3>
+
     </div>
 
     <form data-key='["{{ section_key }}", "{{ link_key }}"]'>
@@ -16,8 +23,10 @@
           {% form_for_link link %}
         </div>
 
+        <hr class="hidden-lg hidden-xl" />
+
         <div class="col-lg-6 response" id="response">
-          <div class="request-info">Awaiting request</div>
+          <div class="request-awaiting">Awaiting request</div>
 
           <div class="meta hide">
             <span class="label label-primary request-method"></span>
@@ -25,9 +34,8 @@
             <label class="label label-lg response-status-code pull-right"></label>
           </div>
 
-          <pre class="request-response hide"></pre>
-
-          <pre class="response-data hide"></pre>
+          <pre class="well response-data hide"></pre>
+          <pre class="well response-raw hide"><div class="response-raw-request"></div><div class="response-raw-response"></div></pre>
         </div>
       </div>
     </div>
